--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="row p-2 px-4 nav">
+<div class="row m-0 p-0 p-2 px-4 nav">
   <div class="col d-flex align-items-center" style="gap: 15px">
     <div class="col">
       <span class="fw-bold fs-4">
@@ -6,10 +6,28 @@
       </span>
     </div>
     <div class="col-auto">
-      <a routerLink="">Link 1</a>
+      <a routerLink="api1">Api 1</a>
     </div>
     <div class="col-auto">
-      <a routerLink="">Link 2</a>
+      <a routerLink="api2">Api 2</a>
+    </div>
+    <div class="col-auto">
+      <a routerLink="api3">Api 3</a>
+    </div>
+    <div class="col-auto">
+      <a routerLink="api4">Api 4</a>
+    </div>
+    <div class="col-auto">
+      <a routerLink="api5">Api 5</a>
+    </div>
+    <div class="col-auto">
+      <a routerLink="api6">Api 6</a>
+    </div>
+    <div class="col-auto">
+      <a routerLink="api7">Api 7</a>
+    </div>
+    <div class="col-auto">
+      <a routerLink="api8">Api 8</a>
     </div>
   </div>
 </div>
