--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,34 +1,26 @@
 <div class="row m-0 p-0 p-2 px-4 nav">
-  <div class="col d-flex align-items-center" style="gap: 15px">
+  <div class="col d-flex align-items-center flex-wrap" style="gap: 15px">
     <div class="col">
       <span class="fw-bold fs-4">
         Matteo Scanferla
       </span>
     </div>
     <div class="col-auto">
-      <a routerLink="api1">Api 1</a>
+      <a routerLinkActive="active" routerLink="api1Esame">Tutte le offerte</a>
     </div>
     <div class="col-auto">
-      <a routerLink="api2">Api 2</a>
+      <a routerLinkActive="active" routerLink="api2Esame">Crea nuova offerta</a>
     </div>
     <div class="col-auto">
-      <a routerLink="api3">Api 3</a>
+      <a routerLinkActive="active" routerLink="api3Esame">Aggiora offerta</a>
     </div>
     <div class="col-auto">
-      <a routerLink="api4">Api 4</a>
+      <a routerLinkActive="active" routerLink="api4Esame">Elimina offerta</a>
     </div>
     <div class="col-auto">
-      <a routerLink="api5">Api 5</a>
+      <a routerLinkActive="active" routerLink="api5Esame">Filtra offerte</a>
     </div>
-    <div class="col-auto">
-      <a routerLink="api6">Api 6</a>
-    </div>
-    <div class="col-auto">
-      <a routerLink="api7">Api 7</a>
-    </div>
-    <div class="col-auto">
-      <a routerLink="api8">Api 8</a>
-    </div>
+
   </div>
 </div>
 
