--- a/src/app/pages/api6/api6.component.html
+++ b/src/app/pages/api6/api6.component.html
@@ -1,3 +1,6 @@
+<span class="fs-2">API 6</span>
+
+
 <div class="row justify-content-center align-items-center m-0 p-0 mb-3">
   <div class="col-auto">
     Max Richieste:
