--- a/src/app/components/auti-card/auti-card.component.html
+++ b/src/app/components/auti-card/auti-card.component.html
@@ -1,9 +1,10 @@
-<div class="m-3 p-2 rounded-2" *ngIf="data" style="background-color: #efefef">
+<div class="m-3 pb-4 px-4 rounded-2 card-auto" *ngIf="data" style="background: rgb(175,175,175);
+background: linear-gradient(-110deg, rgb(236,236,236) 0%, rgb(243,246,255) 100%);">
   <div *ngFor="let key of data | keyvalue">
     <br>
     <strong>{{ key.key }}:</strong> <br>
-    <span *ngIf="key.key === 'DataInserimentoRichiesta' || key.key === 'created_at' || key.key === 'updated_at'">{{ key.value | date:'short' }}</span>
-    <span *ngIf="key.key === 'Importo'">{{ key.value | currency }}</span>
-    <span *ngIf="key.key !== 'DataInserimentoRichiesta' && key.key !== 'created_at' && key.key !== 'updated_at' && key.key !== 'Importo'">{{ key.value }}</span>
+    <span class="text-truncate d-inline-block" style="max-width: 200px" *ngIf="key.key === 'dataInserimento' || key.key === 'created_at' || key.key === 'updated_at'">{{ key.value | date:'short' }}</span>
+    <span class="text-truncate d-inline-block" style="max-width: 200px" *ngIf="key.key === 'Importo'">{{ key.value | currency }}</span>
+    <span class="text-truncate d-inline-block" style="max-width: 200px" *ngIf="key.key !== 'dataInserimento' && key.key !== 'created_at' && key.key !== 'updated_at' && key.key !== 'Importo'">{{ key.value }}</span>
   </div>
 </div>
