--- a/src/app/pages/api1/api1.component.html
+++ b/src/app/pages/api1/api1.component.html
@@ -1,3 +1,5 @@
+<span class="fs-2">API 1</span>
+
 <div class="row justify-content-center align-items-center m-0 p-0 mb-3">
   <div class="col-auto">
     Item da visulizzare (vuoto per visualizzarli tutti):
