--- a/src/app/pages/api2/api2.component.html
+++ b/src/app/pages/api2/api2.component.html
@@ -1,3 +1,5 @@
+<span class="fs-2">API 2</span>
+
 <div class="row justify-content-center align-items-center m-0 p-0 mb-3">
   <div class="col-auto">
     Cognome e/o Nome Richiedente (vuoto per visualizzarli tutti):
