redirect initial route

--- a/src/app/pagesEsame/api5-esame/api5-esame.component.html
+++ b/src/app/pagesEsame/api5-esame/api5-esame.component.html
@@ -34,7 +34,7 @@
 
 </div>
 <ng-template #loading>
-  <div class="position-absolute fw-bold d-flex justify-content-center align-items-center p-4" style="top: 50%; left: 50%; transform: translate(-50%, -50%); border-radius: 50%; aspect-ratio: 1/1; background-color: aquamarine">Loading...</div>
+  <div class="position-absolute fw-bold d-flex justify-content-center align-items-center p-4" style="bottom: 0%; left: 50%; transform: translate(-50%, -50%); border-radius: 50%; aspect-ratio: 1/1; background-color: aquamarine">Loading...</div>
 </ng-template>
 <ng-template #zeroFound>
   <div class="fw-bold d-flex justify-content-center align-items-center p-4">Nessuna offerta trovata per i parametri inseriti...</div>
