--- a/src/app/components/auti-card/auti-card.component.html
+++ b/src/app/components/auti-card/auti-card.component.html
@@ -1,10 +1,19 @@
-<div class="m-3 pb-4 px-4 rounded-2 card-auto" *ngIf="data" style="background: rgb(175,175,175);
+<div class="m-2 pb-4 rounded-2 card-auto row position-relative card" *ngIf="data" style="background: rgb(175,175,175); min-width: 300px;
 background: linear-gradient(-110deg, rgb(236,236,236) 0%, rgb(243,246,255) 100%);">
-  <div *ngFor="let key of data | keyvalue">
-    <br>
-    <strong>{{ key.key }}:</strong> <br>
-    <span class="text-truncate d-inline-block" style="max-width: 200px" *ngIf="key.key === 'dataInserimento' || key.key === 'created_at' || key.key === 'updated_at'">{{ key.value | date:'short' }}</span>
-    <span class="text-truncate d-inline-block" style="max-width: 200px" *ngIf="key.key === 'Importo'">{{ key.value | currency }}</span>
-    <span class="text-truncate d-inline-block" style="max-width: 200px" *ngIf="key.key !== 'dataInserimento' && key.key !== 'created_at' && key.key !== 'updated_at' && key.key !== 'Importo'">{{ key.value }}</span>
+  <div class="w-100 position-absolute title-card" style="left: 0;">
+    <span class="fw-bold">Identificativo: </span>{{data['offertaLavoroID']}}
   </div>
+
+<div class="mt-5">
+  <div *ngFor="let key of data | keyvalue">
+    <div *ngIf="key.key !== 'offertaLavoroID'">
+    <br>
+    <strong class="key">{{ key.key | uppercase}}</strong> <br>
+    <span class="text-truncate d-inline-block" style="max-width: 200px" *ngIf="key.key === 'dataInserimento'">{{ key.value | date:'short' }}</span>
+    <span class="text-truncate d-inline-block" style="max-width: 200px" *ngIf="key.key === 'retribuzioneLorda'">{{ key.value | currency:'€' }}</span>
+    <span class="text-truncate d-inline-block" style="max-width: 200px" *ngIf="key.key !== 'dataInserimento' && key.key !== 'retribuzioneLorda' && key.key !== 'offertaLavoroID'">{{ key.value }}</span>
+  </div>
+  </div>
+</div>
+
 </div>
