--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,26 +1,28 @@
-<div class="row m-0 p-0 p-2 px-4 nav">
+<div class="row m-0 p-4 nav">
   <div class="col d-flex align-items-center flex-wrap" style="gap: 15px">
     <div class="col">
       <span class="fw-bold fs-4">
         Matteo Scanferla
       </span>
     </div>
-    <div class="col-auto">
-      <a routerLinkActive="active" routerLink="api1Esame">Tutte le offerte</a>
-    </div>
-    <div class="col-auto">
-      <a routerLinkActive="active" routerLink="api2Esame">Crea nuova offerta</a>
-    </div>
-    <div class="col-auto">
-      <a routerLinkActive="active" routerLink="api3Esame">Aggiora offerta</a>
-    </div>
-    <div class="col-auto">
-      <a routerLinkActive="active" routerLink="api4Esame">Elimina offerta</a>
-    </div>
-    <div class="col-auto">
-      <a routerLinkActive="active" routerLink="api5Esame">Filtra offerte</a>
-    </div>
+  </div>
+</div>
 
+<div class="row m-0 px-4">
+  <div class="col-auto">
+    <a routerLinkActive="active" routerLink="api1Esame" class="px-2">Tutte le offerte</a>
+  </div>
+  <div class="col-auto">
+    <a routerLinkActive="active" routerLink="api2Esame" class="px-2">Crea nuova offerta</a>
+  </div>
+  <div class="col-auto">
+    <a routerLinkActive="active" routerLink="api3Esame" class="px-2">Aggiorna offerta</a>
+  </div>
+  <div class="col-auto">
+    <a routerLinkActive="active" routerLink="api4Esame" class="px-2">Elimina offerta</a>
+  </div>
+  <div class="col-auto">
+    <a routerLinkActive="active" routerLink="api5Esame" class="px-2">Filtra offerte</a>
   </div>
 </div>
 
