--- a/src/app/pagesEsame/api2-esame/api2-esame.component.html
+++ b/src/app/pagesEsame/api2-esame/api2-esame.component.html
@@ -1,6 +1,7 @@
-<h3>API 2</h3>
+<h3 class="fw-bold">API 2</h3>
 
-<form [formGroup]="nuovaOffertaForm" (submit)="onSubmit()" class="row d-flex flex-column">
+
+<form [formGroup]="nuovaOffertaForm" (submit)="onSubmit()" class="row p-3 d-flex flex-column bg-body-tertiary rounded-4">
   <div class="col my-2">
     <label class="fw-bold">Titolo</label>
     <input formControlName="titolo" class="form-control" type="text">
