--- a/src/app/components/auti-card/auti-card.component.scss
+++ b/src/app/components/auti-card/auti-card.component.scss
@@ -1,2 +1,19 @@
-.card-auto {
+.card {
+  border: 0;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 1rem !important;
+}
+
+
+.title-card {
+  border-radius: 10px 10px 0px 0px;
+  padding: 10px;
+  background-color: rgba(0, 128, 0, 0.3);
+}
+
+
+.key {
+  background-color: #e1e1e1;
+  border-radius: 50px;
+  padding: 3px 10px;
 }
