--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,4 +1,9 @@
 .nav {
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
-  background-color: #eae9e9;
+  background: rgb(175, 175, 175);
+  background: linear-gradient(180deg, rgb(204, 204, 204) 0%, rgba(255, 255, 255, 1) 100%);
+}
+
+.active {
+  background-color: #ffc3c3 !important;
+  color: black;
 }
