--- a/src/app/pagesEsame/api1-esame/api1-esame.component.html
+++ b/src/app/pagesEsame/api1-esame/api1-esame.component.html
@@ -21,7 +21,7 @@
 
 </div>
 <ng-template #loading>
-  <div class="row justify-content-center mt-3">
+  <div *ngIf="maxRichieste.valid" class="row justify-content-center mt-3">
     <div class="col-auto fw-bold d-flex justify-content-center align-items-center p-4"
          style="width: 100px; height:100px; border-radius: 50%; aspect-ratio: 1/1; background-color: aquamarine">
       Loading...
